@@ -171,9 +171,14 @@ public class Stores {
             throw new StoresNotInitializeException("Incorrect key ring format: " + uri
                 + ". Make sure you use format safkeyring://userId/keyRing");
         }
-
-        return new URL(formatKeyringUrl(uri));
-
+        String formatted = formatKeyringUrl(uri);
+        try {
+            return new URL(formatted);
+        } catch (MalformedURLException e) {
+            System.err.println("ERROR: Unknown protocol in '" + formatted + "': " + e.getMessage());
+            System.err.println("Ensure the JVM is started with: --add-modules ibm.crypto.zsecurity,ibm.crypto.hdwrcca");
+            System.err.println("And that ensureSafkeyringHandler() has been called to set java.protocol.handler.pkgs");
+            throw e;
+        }
     }
-
 }
